objects/MPW_Process_Group__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geometry_ID__c</fullName>
        <label>Geometry ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MPW Process Group</label>
    <nameField>
        <label>MPW Process Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPW Process Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>